dts: hobot: fix [X5-2749] Fix model error in x5-evb-lp4-v2p0.dts
Signed-off-by: zhiwei01.li <zhiwei01.li@d-robotics.cc>
Change-Id: I0c75ba9f936b933dcaa0daba545e488f9ff8866c

--- a/arch/arm64/boot/dts/hobot/x5-evb-lp4-v2p0.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-lp4-v2p0.dts
@@ -10,7 +10,7 @@
 #include "x5-evb.dtsi"
 
 / {
-	model = "D-Robotics X5 EVB LP4X V2P0 board";
+	model = "D-Robotics X5 EVB LP4 V2P0 board";
 };
 
 /* ANT_CTRL1 */
