usb: dwc3: fix [X5-2752] Add snps,dis_enblslpm_quirk to disable dwc3 LPM feature.
1. According to Documentation/devicetree/bindings/usb/snps,dwc3.yaml description,
snps,dis_enblslpm_quirk:
    description:
      When set clears the enblslpm in GUSB2PHYCFG, disabling the suspend signal
      to the PHY.
    type: boolean

2. It seems that LPM feature is not work well in Realsense sensor...
Below "xhci die" issue will happen, exception above quirk...

usb 1-1: new high-speed USB device number 2 using xhci-hcd
xhci-hcd xhci-hcd.3.auto: Abort failed to stop command ring: -110
xhci-hcd xhci-hcd.3.auto: xHCI host controller not responding, assume dead
xhci-hcd xhci-hcd.3.auto: HC died; cleaning up
xhci-hcd xhci-hcd.3.auto: Timeout while waiting for configure endpoint command
usb 1-1: can't set config #1, error -62
usb 1-1: USB disconnect, device number 2

3. Then just disable LPM feature with snps,dis_enblslpm_quirk, to fix this issue...

Change-Id: Ibb739bb817738f2551fa8254547ec893e3575add
Signed-off-by: jianghe.xu <jianghe.xu@d-robotics.cc>

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -3375,6 +3375,7 @@
 					usb-role-switch;
 					usb-phy = <&usb3_u2phy>;
 					snps,dis_u2_susphy_quirk;
+					snps,dis_enblslpm_quirk;
 					xhci,reset-on-resume-quirk;
 					interrupt-parent = <&gic>;
 					interrupts = <GIC_SPI 30 IRQ_TYPE_LEVEL_HIGH>;
@@ -3415,6 +3416,7 @@
 					maximum-speed = "high-speed";
 					// usb-phy = <&usb2phy>;
 					snps,dis_u2_susphy_quirk;
+					snps,dis_enblslpm_quirk;
 					xhci,reset-on-resume-quirk;
 					interrupt-parent = <&gic>;
 					interrupts = <GIC_SPI 29 IRQ_TYPE_LEVEL_HIGH>;
