--- a/arch/arm64/configs/hobot_x5_fpga_defconfig
+++ b/arch/arm64/configs/hobot_x5_fpga_defconfig
@@ -114,6 +114,7 @@ CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_HCIUART=m
+CONFIG_BT_HCIUART_H4=y
 CONFIG_BT_HCIUART_RTL=y
 CONFIG_CFG80211=m
 CONFIG_DEVTMPFS=y
