--- a/arch/arm64/configs/hobot_x5_soc_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_defconfig
@@ -115,6 +115,7 @@ CONFIG_BT=m
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_HCIUART=m
+CONFIG_BT_HCIUART_H4=y
 CONFIG_BT_HCIUART_RTL=y
 CONFIG_CFG80211=m
 CONFIG_RFKILL=m
