feat(driver): [RDK-443] (x5-hobot-audio-config|x5-hobot-io) Add driver support for hiwonder_rasadapter5b
Signed-off-by: fuhua.wang <fuhua.wang@d-robotics.cc>

--- a/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
+++ b/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
@@ -998,6 +998,7 @@ CONFIG_SND_SOC_WM8962=y
 CONFIG_SND_SOC_ES7210=m
 CONFIG_SND_SOC_ES8156=m
 CONFIG_SND_SOC_ES8311=m
+CONFIG_SND_SOC_HIWONDER_GOOGLEVOICEHAT_SOUNDCARD=m
 CONFIG_SND_DUPLEX_CARD=m
 CONFIG_SND_HOBOT_SOUND_MACHINE=m
 CONFIG_SND_HOBOT_SOUND_DUPLEX_HOST=m
