dts: bpu_qos: fix [X5-2855] Add clock in bpu qos
Signed-off-by: ming.yu <ming.yu@hobot.cc>
Change-Id: If058a21d1978c52964bdb263efbe400f5c3394d4

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -2239,7 +2239,9 @@
 			power-domains = <&power X5_BPU>;
 			consumer-dev = <&bpu>;
 
-			clocks-num = <0>;
+			clocks-num = <1>;
+			clocks = <&hpsclks X5_BPU_MCLK_2X_CLK>;
+			clock-names = "cnn_mclk";
 
 			status = "okay";
 			ports-num = <1>;
