dts: hobot: fix [X5-2877] Add a power pin to the WiFi module of V2P0
Summary:
Reboot requires resetting aic8800

Signed-off-by: xin03.liu <xin03.liu@d-robotics.cc>
Change-Id: Ia40de46d677d9103a1e5ec5e0e205b8f029a5e84

--- a/arch/arm64/boot/dts/hobot/x5-evb-lp4-v2p0.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-lp4-v2p0.dts
@@ -57,6 +57,7 @@
 
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_sdio &aon_gpio_3 &hsio_gpio0_23 &lsio_gpio1_4>;
+	power-gpios = <&aon_gpio_porta 3 GPIO_ACTIVE_HIGH>;
 };
 
 /* RTC1 */
