dts: camera_power: feat [X5-1036] Disable camera power regulator setting
Summary:
1. camera power is not used now, we can disable camera0_pd_dc_1v8 and
camera1_pd_dc_1v8 in som dts
2. camera0_pd_dc_1v8 and camera1_pd_dc_1v8 is enabled, and the
lsio_gpio_7 and lsio_gpio_8 has been used as uart1_rst and uart2_rx,
disable them now to avoid error message when boot

Signed-off-by: ming.yu <ming.yu@hobot.cc>
Change-Id: I9e8bd493951a0412ebc89df3f6a4bc73eeb6e78e

--- a/arch/arm64/boot/dts/hobot/x5-som.dts
+++ b/arch/arm64/boot/dts/hobot/x5-som.dts
@@ -498,12 +498,12 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&lsio_gpio0_7>;
 	enable-gpio = <&ls_gpio0_porta 7 GPIO_ACTIVE_HIGH>;
-	status = "okay";
+	status = "disabled";
 };
 
 &camera1_pd_dc_1v8 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&lsio_gpio0_8>;
 	enable-gpio = <&ls_gpio0_porta 8 GPIO_ACTIVE_HIGH>;
-	status = "okay";
+	status = "disabled";
 };
