dts: hobot: fix [X5-2859] Disable pcf8563 RTC1 on X5 V2.0 EVB
Summary:
- Disabled the pcf8563 RTC1 device in the device tree for the X5 V2.0 EVB, as it has been removed from the hardware.

Signed-off-by: xiangqing.shi <xiangqing.shi@horizon.cc>
Change-Id: I7ed458afec0a0007ba2794554231a4dae16bf542

--- a/arch/arm64/boot/dts/hobot/x5-evb-lp4-v2p0.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-lp4-v2p0.dts
@@ -58,3 +58,10 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_sdio &aon_gpio_3 &hsio_gpio0_23 &lsio_gpio1_4>;
 };
+
+/* RTC1 */
+&i2c4 {
+    pcf8563@51 {
+        status = "disabled";  // X5 v2.0 EVB removed pcf8563
+    };
+};
