--- a/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
+++ b/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
@@ -797,7 +797,10 @@ CONFIG_VIDEO_HOBOTC_JPU=m
 CONFIG_VIDEO_HOBOTC_VPU=m
 CONFIG_V4L_TEST_DRIVERS=y
 CONFIG_VIDEO_VIVID=m
+CONFIG_VIDEO_IMX219=m
 CONFIG_VIDEO_OV5640=m
+CONFIG_VIDEO_OV5647=m
+CONFIG_VIDEO_SC230AI=m
 # CONFIG_CXD2880_SPI_DRV is not set
 # CONFIG_MEDIA_TUNER_E4000 is not set
 # CONFIG_MEDIA_TUNER_FC0011 is not set
