--- a/arch/arm64/boot/dts/hobot/x5-evb-lp4-v2p0.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-lp4-v2p0.dts
@@ -58,6 +58,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_sdio &aon_gpio_3 &hsio_gpio0_23 &lsio_gpio1_4>;
 	power-gpios = <&aon_gpio_porta 3 GPIO_ACTIVE_HIGH>;
+	toggle_interval_us = <100000>;
 };
 
 /* RTC1 */
