feat(config): Add CONFIG_VIDEO_IMX477=m
Signed-off-by: xin03.liu <xin03.liu@horizon.cc>

--- a/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
+++ b/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
@@ -798,6 +798,7 @@ CONFIG_VIDEO_HOBOTC_VPU=m
 CONFIG_V4L_TEST_DRIVERS=y
 CONFIG_VIDEO_VIVID=m
 CONFIG_VIDEO_IMX219=m
+CONFIG_VIDEO_IMX477=m
 CONFIG_VIDEO_OV5640=m
 CONFIG_VIDEO_OV5647=m
 CONFIG_VIDEO_SC230AI=m
