--- a/arch/arm64/boot/dts/hobot/x5-rdk.dts
+++ b/arch/arm64/boot/dts/hobot/x5-rdk.dts
@@ -16,7 +16,9 @@
 //wifi antenna Onboard
 &dsp_gpio_porta {
 	pinctrl-names = "default";
-	pinctrl-0 = < &dsp_gpio0_17
+	pinctrl-0 = < &dsp_gpio0_15
+				  &dsp_gpio0_16
+				  &dsp_gpio0_17
 				  &dsp_gpio0_18
 				  &dsp_gpio0_22 //USB HUB RESET high
 				>;
