--- a/arch/arm64/configs/hobot_x5_soc_perf_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_perf_defconfig
@@ -267,6 +267,8 @@ CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=m
 # CONFIG_RADIO_ADAPTERS is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
+CONFIG_V4L_MEM2MEM_DRIVERS=y
+CONFIG_VIDEO_WAVE_VPU=m
 CONFIG_HOBOT_VIO=m
 CONFIG_HOBOT_VIO_JPLUS=y
 CONFIG_HOBOT_VIO_COMMON=m
@@ -518,8 +520,8 @@ CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_OF_DWCMSHC=y
 CONFIG_RTC_CLASS=y
-CONFIG_RTC_DRV_DWAPB=y
 CONFIG_RTC_DRV_PCF8563=m
+CONFIG_RTC_DRV_DWAPB=y
 CONFIG_DMADEVICES=y
 CONFIG_DW_AXI_DMAC=y
 CONFIG_DMATEST=m
