--- a/arch/arm64/configs/hobot_x5_soc_with_docker_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_with_docker_defconfig
@@ -292,6 +292,8 @@ CONFIG_MEDIA_SUPPORT=y
 # CONFIG_DVB_DYNAMIC_MINORS is not set
 # CONFIG_RADIO_ADAPTERS is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
+CONFIG_V4L_MEM2MEM_DRIVERS=y
+CONFIG_VIDEO_WAVE_VPU=m
 CONFIG_HOBOT_VIO=m
 CONFIG_HOBOT_VIO_JPLUS=y
 CONFIG_HOBOT_VIO_COMMON=m
