dts: d-robotics|wave5: feat [X5-1365] Add drobotics wave5 dts node for wave5 codec.
Just add the drobot_wave521cl_data and vpu_v4l2 device node for
chips&media's wave5 codec ip.
Disable it in default, as it will be conflict with drobotics vpu driver currently.
If user want to use wave5 v4l2 driver, just disable vpu@3B000000 and
enable vpu_v4l2@3B00000 node.
Currently, the decoder function could work basically with some panic
issue. And encoder will block in start_streaming stage, and the state
couldn't switch to VPU_INST_STATE_PIC_RUN stage...
Anyway, commit the patches, and above issue will be solved by following
patches.

Change-Id: Iafa3966b90c311742d3761dc5069b80dbd8950c6
Signed-off-by: jianghe.xu <jianghe.xu@d-robotics.cc>

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -866,6 +866,26 @@
 			status = "okay";
 		};
 
+		vpu_v4l2: vpu_v4l2@3B000000 {
+			compatible = "d-robotics,x5-wave521cl";
+			reg = <0x3b000000 0x10000>;
+			interrupt-parent = <&gic>;
+			interrupts =
+				<GIC_SPI 32 IRQ_TYPE_LEVEL_HIGH>;
+			clocks = <&hpsclks X5_VIDEO_CODEC_PCLK>,
+					<&hpsclks X5_VIDEO_CODEC_ACLK>,
+					<&hpsclks X5_VIDEO_CODEC_CCLK>,
+					<&hpsclks X5_VIDEO_CODEC_BCLK>;
+			clock-names = "vpu_pclk", "vpu_aclk", "vpu_cclk", "vpu_bclk";
+
+			// NOTICE: iommu depends on power-domain, if no-power, it will hung.
+			power-domains = <&power X5_VIDEO>;
+			iommus = <&vpu_iommu>;
+			resets = <&socrst VIDEO_CODEC_RESET>;
+
+			status = "disabled";
+		};
+
 		jpu_iommu: jpu_iommu@3b020018 {
 			compatible = "d-robotics,lite_mmu";
 			reg = <0x3b020018 0x14>;
