iio: imu: feat [X5-3076] Add BMI088 driver support
This patch ports and adapts the BMI088 IMU driver from the reference source.
It includes device tree declarations (disabled by default), and Kconfig
integration for enabling the driver.

To enable:
- Activate the corresponding device tree node
- Enable the driver via Kconfig
- Optionally add bmi08x_i2c_driver/bmi08g_spi_driver to blacklist.conf

Change-Id: If13323cb5dffb3ab7e4bef94fd4b444dc0766a24
Signed-off-by: fuhua.wang <fuhua.wang@d-robotics.cc>

--- a/arch/arm64/boot/dts/hobot/x5-evb.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-evb.dtsi
@@ -278,6 +278,22 @@
 		#sound-dai-cells = <0>;
 		status = "okay";
 	};
+
+	bmi08a@19 {
+		compatible = "bmi08xa";
+		reg = <0x19>;
+		interrupt-parent = <&ls_gpio1_porta>;
+		interrupts = <4 IRQ_TYPE_EDGE_RISING>;
+		status = "disabled";
+	};
+
+	bmi08g@69 {
+		compatible = "bmi08xg";
+		reg = <0x69>;
+		interrupt-parent = <&ls_gpio1_porta>;
+		interrupts = <6 IRQ_TYPE_EDGE_RISING>;
+		status = "disabled";
+	};
 };
 
 &i2c4 {
@@ -416,6 +432,34 @@
 &emmc {
 	status = "okay";
 	fixed-emmc-driver-type = <2>;
+};
+
+&spi1 {
+	/*When dual chip select is used, the number of SPI chip selects must be set to 2.*/
+	/*num-cs = <2>;*/
+	status = "disabled";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_spi1 &pinctrl_spi1_ssn1>;
+	dma-names = "tx", "rx";
+	dmas = <&axi_dmac 23>, <&axi_dmac 22>;
+
+	bmi08g@0 {
+		compatible = "bmi088_gyro";
+		reg = <0>;
+		spi-max-frequency = <5000000>;
+		interrupt-parent = <&ls_gpio1_porta>;
+		interrupts = <6 IRQ_TYPE_EDGE_RISING>;
+		status = "disabled";
+	};
+
+	bmi08a@1 {
+		compatible = "bmi08a";
+		reg = <1>;
+		spi-max-frequency = <5000000>;
+		interrupt-parent = <&ls_gpio1_porta>;
+		interrupts = <4 IRQ_TYPE_EDGE_RISING>;
+		status = "disabled";
+	};
 };
 
 &spi2 {
