arm: dts: feat [X5-3017] Support distinguishing X5 chip types
Signed-off-by: zhiwei01.li <zhiwei01.li@d-robotics.cc>
Change-Id: I5d359b7e6b0f1a45f121f115c94585d912c42e37

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -767,7 +767,7 @@
 		socinfo: socinfo{
 			compatible = "hobot,boardinfo";
 			soc_gen = "X5";
-			soc_name = "X5M";
+			soc_name = "UKNOWN";
 			hw_name = "0000000000000000"; /* 16Btyes */
 			board_version = "0000000000000000"; /* 16Btyes */
 			hw_info = "00000000000000000000000000000000";  /* 32Btyes */
