configs: hobot: feat [X5-3122] Add TCAN4X5X driver for RDK board
Signed-off-by: xin03.liu <xin03.liu@d-robotics.cc>
Change-Id: I646fe88a79c579cf07b95925bec1db84f050cc9b

--- a/arch/arm64/configs/hobot_x5_fpga_defconfig
+++ b/arch/arm64/configs/hobot_x5_fpga_defconfig
@@ -110,6 +110,7 @@ CONFIG_DCB=y
 CONFIG_NETLINK_DIAG=y
 CONFIG_CGROUP_NET_PRIO=y
 CONFIG_CGROUP_NET_CLASSID=y
+CONFIG_CAN=y
 CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
@@ -195,6 +196,8 @@ CONFIG_DWMAC_DWC_QOS_ETH=m
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_REALTEK_PHY=m
+CONFIG_CAN_M_CAN=y
+CONFIG_CAN_M_CAN_TCAN4X5X=m
 CONFIG_USB_NET_DRIVERS=m
 CONFIG_USB_USBNET=m
 CONFIG_AIC_WLAN_SUPPORT=y
