--- a/arch/arm64/configs/hobot_x5_soc_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_defconfig
@@ -111,6 +111,7 @@ CONFIG_DCB=y
 CONFIG_NETLINK_DIAG=y
 CONFIG_CGROUP_NET_PRIO=y
 CONFIG_CGROUP_NET_CLASSID=y
+CONFIG_CAN=y
 CONFIG_BT=m
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
@@ -210,6 +211,8 @@ CONFIG_DWMAC_DWC_QOS_ETH=y
 CONFIG_X5_ETH=y
 CONFIG_JPLUS_ETH=y
 CONFIG_REALTEK_PHY=y
+CONFIG_CAN_M_CAN=y
+CONFIG_CAN_M_CAN_TCAN4X5X=m
 CONFIG_USB_NET_DRIVERS=m
 CONFIG_USB_USBNET=m
 CONFIG_AIC_WLAN_SUPPORT=y
