configs: hobot: feat [X5-3122] Add ES8326 driver for RDK board
Signed-off-by: xin03.liu <xin03.liu@d-robotics.cc>
Change-Id: Ic54adab488a314e217b14fa9d48397e0958fbe21

--- a/arch/arm64/configs/hobot_x5_fpga_defconfig
+++ b/arch/arm64/configs/hobot_x5_fpga_defconfig
@@ -414,6 +414,7 @@ CONFIG_SND_DESIGNWARE_I2S=y
 CONFIG_SND_DESIGNWARE_PCM=y
 CONFIG_SND_ARCHBAND_PDM=y
 CONFIG_SND_VIRT_CODEC=y
+CONFIG_SND_SOC_ES8326=m
 CONFIG_SND_SOC_WM8962=y
 CONFIG_SND_SIMPLE_CARD=y
 CONFIG_USB=y
