--- a/arch/arm64/configs/hobot_x5_soc_with_docker_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_with_docker_defconfig
@@ -501,6 +501,7 @@ CONFIG_SND_DESIGNWARE_I2S=m
 CONFIG_SND_DESIGNWARE_PCM=y
 CONFIG_SND_ARCHBAND_PDM=y
 CONFIG_SND_VIRT_CODEC=y
+CONFIG_SND_SOC_ES8326=m
 CONFIG_SND_SOC_WM8962=y
 CONFIG_SND_SOC_ES7210=m
 CONFIG_SND_SOC_ES8156=m
