dts: hobot: feat [X5-3122] Disabled sound-machine for RDK
Summary:
    RDK does not yet support hifi5, disable related modules

Signed-off-by: xin03.liu <xin03.liu@d-robotics.cc>
Change-Id: I61ad796da38f7e833b13d993935e0ea5fb59c4e0

--- a/arch/arm64/boot/dts/hobot/x5-rdk.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-rdk.dtsi
@@ -67,7 +67,7 @@
 		compatible = "gua,sound-card";
 		model = "gua-audio";
 		cpu-dai = <&sound_cpu>;
-		status = "okay";
+		status = "disabled";
 	};
 
 	vdd08_gpu_reg: vdd08_gpu_reg@3 {
