--- a/arch/arm64/boot/dts/hobot/x5-rdk.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-rdk.dtsi
@@ -281,6 +281,15 @@
 
 &i2c3 {
 	status = "okay";
+
+	ft5406@38 {
+		compatible = "ft5406";
+		reg = <0x38>;
+	};
+	hb_bl@45 {
+		compatible = "hobot_bl_controller";
+		reg = <0x45>;
+	};
 };
 
 &i2c4 {
@@ -613,6 +622,33 @@
 
 &bpu {
 	cnn-supply = <&vdd08_bpu_1_reg>;
+};
+
+&mipi_dsi0 {
+
+	status = "okay";
+
+	ports {
+		port@1 {
+			reg = <1>;
+			mipi_dsi_out: endpoint {
+				remote-endpoint = <&panel_in>;
+			};
+		};
+	};
+
+	dsi_panel0@0 {
+		compatible = "wh-cm480";
+		reg = <0>;
+
+		port {
+			panel_in: endpoint {
+				remote-endpoint =
+					<&mipi_dsi_out>;
+			};
+		};
+	};
+
 };
 
 /* For boards that do not need display module,
