--- a/arch/arm64/configs/hobot_x5_soc_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_defconfig
@@ -221,6 +221,7 @@ CONFIG_INPUT_EVDEV=m
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_FT5406=m
 CONFIG_TOUCHSCREEN_GT9XX=m
 # CONFIG_SERIO_SERPORT is not set
 CONFIG_SERIO_AMBAKMI=y
@@ -460,7 +461,8 @@ CONFIG_VIDEO_SC230AI=m
 CONFIG_DRM=y
 CONFIG_DRM_PANEL_ATK_MD0550=y
 CONFIG_DRM_PANEL_JC_050HD134=m
-CONFIG_DRM_SII902X=y
+CONFIG_DRM_PANEL_WH_CM480=m
+CONFIG_DRM_SII902X=m
 CONFIG_DRM_LONTIUM_LT8618=m
 CONFIG_VERISILICON_X5_SYSCON_BRIDGE=m
 CONFIG_DRM_VERISILICON=m
@@ -474,6 +476,7 @@ CONFIG_FB=y
 CONFIG_FB_VIRTUAL=m
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_PWM=y
+CONFIG_BACKLIGHT_HOBOT=m
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_SOC=y
