--- a/arch/arm64/configs/hobot_x5_soc_perf_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_perf_defconfig
@@ -219,6 +219,7 @@ CONFIG_AIC_WLAN_SUPPORT=y
 CONFIG_AIC8800_WLAN_SUPPORT=m
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
+CONFIG_TOUCHSCREEN_FT5406=m
 # CONFIG_SERIO_SERPORT is not set
 CONFIG_SERIO_AMBAKMI=y
 CONFIG_VT_HW_CONSOLE_BINDING=y
@@ -455,7 +456,8 @@ CONFIG_VIDEO_HOBOTC_VPU=m
 CONFIG_DRM=y
 CONFIG_DRM_PANEL_ATK_MD0550=y
 CONFIG_DRM_PANEL_JC_050HD134=m
-CONFIG_DRM_SII902X=y
+CONFIG_DRM_PANEL_WH_CM480=m
+CONFIG_DRM_SII902X=m
 CONFIG_DRM_LONTIUM_LT8618=m
 CONFIG_VERISILICON_X5_SYSCON_BRIDGE=m
 CONFIG_DRM_VERISILICON=m
@@ -469,6 +471,7 @@ CONFIG_FB=y
 CONFIG_FB_VIRTUAL=m
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_PWM=y
+CONFIG_BACKLIGHT_HOBOT=m
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_SOC=y
