lcd: wh-cm480: fix [X5-3122] Add LCD panel wh-cm480
Summary:
    1. dsi_panel driver wh-cm480
    2. touchscreen ft5406
    3. backlight hb_bl

Signed-off-by: xin03.liu <xin03.liu@d-robotics.cc>
Change-Id: I8d22ee7615d1943757fc8cd4f4aa1b0b62455c8b

--- a/drivers/video/backlight/Kconfig
+++ b/drivers/video/backlight/Kconfig
@@ -476,6 +476,12 @@ config BACKLIGHT_LED
 	help
 	  If you have a LCD backlight adjustable by LED class driver, say Y
 	  to enable this driver.
+	  
+config BACKLIGHT_HOBOT
+	tristate "Hobot backlight controller driver"
+	depends on I2C
+	help
+		Control the backlight level of RDK LCD panel.
 
 endif # BACKLIGHT_CLASS_DEVICE
 
