--- a/arch/arm64/configs/hobot_x5_soc_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_defconfig
@@ -210,6 +210,7 @@ CONFIG_DWMAC_DWC_QOS_ETH=y
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_X5_ETH=y
 CONFIG_JPLUS_ETH=y
+CONFIG_MARVELL_PHY=y
 CONFIG_REALTEK_PHY=y
 CONFIG_CAN_M_CAN=y
 CONFIG_CAN_M_CAN_TCAN4X5X=m
