configs: hobot: feat [X5-3122] Add CONFIG_RTC_DRV_HPU3501 for RDK
Signed-off-by: xin03.liu <xin03.liu@d-robotics.cc>
Change-Id: Id3045b98cb45129167ecf4c7b4cc25d9961ef212

--- a/arch/arm64/configs/hobot_x5_fpga_defconfig
+++ b/arch/arm64/configs/hobot_x5_fpga_defconfig
@@ -494,6 +494,7 @@ CONFIG_ION_CMA_HEAP=y
 CONFIG_ION_HOBOT=y
 CONFIG_PWM_DROBOT=y
 CONFIG_RTC_DRV_DWAPB=y
+CONFIG_RTC_DRV_HPU3501=y
 CONFIG_HOBOT_BPU=y
 CONFIG_BPU=m
 # CONFIG_BPU_ONDEMAND_GOVERNOR is not set
