--- a/arch/arm64/configs/hobot_x5_soc_perf_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_perf_defconfig
@@ -529,6 +529,7 @@ CONFIG_MMC_SDHCI_OF_DWCMSHC=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_PCF8563=m
 CONFIG_RTC_DRV_DWAPB=y
+CONFIG_RTC_DRV_HPU3501=y
 CONFIG_DMADEVICES=y
 CONFIG_DW_AXI_DMAC=y
 CONFIG_DMATEST=m
