drm: verisilicon: feat [X5-25 X5-3014] Bring-up MIPI CSI-TX
Change-Id: Ia71e9de2ef179e96a44201b6b41c156c7a9bf6f6

--- a/arch/arm64/configs/hobot_x5_soc_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_defconfig
@@ -463,6 +463,7 @@ CONFIG_DRM=y
 CONFIG_DRM_PANEL_ATK_MD0550=y
 CONFIG_DRM_PANEL_JC_050HD134=m
 CONFIG_DRM_PANEL_WH_CM480=m
+CONFIG_DRM_PANEL_DROBOT_CSI=m
 CONFIG_DRM_SII902X=m
 CONFIG_DRM_LONTIUM_LT8618=m
 CONFIG_VERISILICON_X5_SYSCON_BRIDGE=m
@@ -473,6 +474,7 @@ CONFIG_VERISILICON_DW_MIPI_DSI=y
 CONFIG_VERISILICON_WRITEBACK_SIF=y
 CONFIG_VERISILICON_GEM_ION=y
 CONFIG_VERISILICON_GC_PROC_SUPPORT=y
+CONFIG_DROBOT_DW_CSI_TX=y
 CONFIG_FB=y
 CONFIG_FB_VIRTUAL=m
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
