--- a/drivers/phy/verisilicon/Makefile
+++ b/drivers/phy/verisilicon/Makefile
@@ -1,2 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0
 obj-$(CONFIG_PHY_SNPS_MIPI_DPHY)		+= phy-snps-mipi-dphy.o
+
+phy-snps-mipi-dphy-objs := phy-snps-mipi-dphy.o dphy-debugfs.o
