--- a/arch/arm64/boot/dts/hobot/x5-evb.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-evb.dtsi
@@ -894,6 +894,39 @@ the following ports need to be deleted*/
 	status = "okay";
 };
 
+&mipi_csi0 {
+	status = "okay";
+	ports {
+		port@1 {
+			reg = <1>;
+			mipi_csi_out: endpoint {
+				remote-endpoint = <&csi_panel_in>;
+			};
+		};
+	};
+};
+
+&csi_panel0 {
+	status = "okay";
+	port {
+		csi_panel_in: endpoint {
+			remote-endpoint = <&mipi_csi_out>;
+		};
+	};
+};
+
+&csi_encoder {
+	status = "okay";
+};
+
+&csi_panel0 {
+	status = "okay";
+};
+
+&csi_syscon_bridge {
+	status = "okay";
+};
+
 /**display sub-system end**/
 
 &horizon_tsn {
