--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -2536,12 +2536,17 @@
 					#address-cells = <1>;
 					#size-cells = <0>;
 					dc_out_0: port@0 {
+						#address-cells = <1>;
+						#size-cells = <0>;
 						reg = <0>;
 						dc_out_dpi0: endpoint@0 {
 							remote-endpoint = <&dsi_encoder_in>;
 						};
 						dc_out_dpi1: endpoint@1 {
 							remote-endpoint = <&hdmi_encoder_in1>;
+						};
+						dc_out_dpi2: endpoint@2 {
+							remote-endpoint = <&csi_encoder_in>;
 						};
 					};
 				};
@@ -2581,9 +2586,14 @@
 
 					/* output */
 					port@0 {
+						#address-cells = <1>;
+						#size-cells = <0>;
 						reg = <0>;
-						bt1120_out: endpoint {
+						bt1120_out: endpoint@0 {
 							remote-endpoint = <&hdmi_encoder_in0>;
+						};
+						bt1120_out1: endpoint@1 {
+							remote-endpoint = <&csi_encoder_in1>;
 						};
 					};
 
@@ -2695,6 +2705,94 @@
 					};
 				};
 			};
+
+			mipi_csi0: mipi_csi0@3e020000 {
+					compatible = "verisilicon,dw-mipi-csi";
+					status = "disabled";
+					reg = <0x3e020000 0x20000>;
+					interrupt-parent = <&gic>;
+					interrupts = <GIC_SPI 55 IRQ_TYPE_LEVEL_HIGH>;
+					#address-cells = <1>;
+					#size-cells = <0>;
+					phys = <&dphy0>;
+					phy-names = "dphy";
+					clock-names = "pclk";
+					clocks = <&hpsclks X5_DISP_CSI_PCLK>;
+					clk-continuous = <1>;
+					ports {
+						#address-cells = <1>;
+						#size-cells = <0>;
+						port@0 {
+							reg = <0>;
+							mipi_csi_in: endpoint {
+								remote-endpoint =
+									<&csi_subsys_bridge_out>;
+							};
+						};
+					};
+				};
+
+				csi_syscon_bridge: csi-syscon-bridge {
+					compatible = "verisilicon,csi-syscon-bridge";
+					verisilicon,syscon = <&disp_sys_con>;
+					status = "disabled";
+					ports {
+						#address-cells = <1>;
+						#size-cells = <0>;
+						/* input */
+						port@0 {
+							reg = <0>;
+							csi_subsys_bridge_in:endpoint {
+								remote-endpoint =
+									<&csi_encoder_out>;
+							};
+						};
+						/* output */
+						port@1 {
+							reg = <1>;
+							csi_subsys_bridge_out:endpoint {
+								remote-endpoint = <&mipi_csi_in>;
+							};
+						};
+					};
+				};
+
+				csi_encoder: csi-encoder {
+					compatible = "verisilicon,csi-encoder";
+					status = "disabled";
+					ports {
+						#address-cells = <1>;
+						#size-cells = <0>;
+						/* input */
+						port@0 {
+							#address-cells = <1>;
+							#size-cells = <0>;
+							reg = <0>;
+							csi_encoder_in:endpoint@0 {
+								remote-endpoint =
+									<&dc_out_dpi2>;
+							};
+							csi_encoder_in1:endpoint@1 {
+							remote-endpoint =
+									<&bt1120_out1>;
+							};
+						};
+						/* output */
+						port@1 {
+							reg = <1>;
+							csi_encoder_out:endpoint {
+								remote-endpoint =
+									<&csi_subsys_bridge_in>;
+							};
+						};
+					};
+				};
+
+				csi_panel0: csi_panel0@0 {
+					compatible = "csi-panel";
+					status = "disabled";
+				};
+
 
 			display_subsystem: display-subsystem {
 				compatible = "verisilicon,display-subsystem";
