--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -753,4 +753,18 @@ config DRM_PANEL_WH_CM480
 	  Say Y here if you want to enable support for the CM480
 	  panel with 480x800 resolution. This panel support
 	  MIPI DSI interface.
+
+config DRM_PANEL_DROBOT_CSI
+	tristate "Drobot CSI Virtual Panel"
+	depends on OF
+	depends on DRM
+	select VIDEOMODE_HELPERS
+	help
+	  Enable support for the drobot-csi virtual panel driver.
+	  This panel provides a virtual/CSI output.
+	  Typically used as a dummy or test panel that doesn't have
+	  real backlight or GPIO.
+
+
+
 endmenu
