drm: verisilicon: feat [X5-3163] Add CSI-TX IOCTL driver
Signed-off-by: jiale01.luo <jiale01.luo@d-robotics.cc>
Change-Id: I39a86da976f0c232cd3308a63afe566da49bed4e

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -2709,6 +2709,7 @@
 			mipi_csi0: mipi_csi0@3e020000 {
 					compatible = "verisilicon,dw-mipi-csi";
 					status = "disabled";
+					verisilicon,syscon = <&disp_sys_con>;
 					reg = <0x3e020000 0x20000>;
 					interrupt-parent = <&gic>;
 					interrupts = <GIC_SPI 55 IRQ_TYPE_LEVEL_HIGH>;
