drm: verisilicon: fix [X5-3260] Add missing dependency for CSI ioctl
Signed-off-by: jiale01.luo <jiale01.luo@d-robotics.cc>
Change-Id: I7e04a6322653adb14d036cdfb0243a5a836292e1

--- a/drivers/gpu/drm/verisilicon/Kconfig
+++ b/drivers/gpu/drm/verisilicon/Kconfig
@@ -119,4 +119,5 @@ config DROBOT_DW_CSI_TX
 config DROBOT_DW_CSI_IOCTL
 	bool "DW MIPI CSI-TX ioctl support"
 	depends on DRM_VERISILICON
+	select DROBOT_DW_CSI_TX
 	default y
